--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <title>Hola Mundo!</title>
 </head>
 
-<body>
+<body class="bg-dark">
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-md">
             <a class="navbar-brand" href="#">Jesus Palomino</a>
         </div>
     </nav>
-    <div class="container text-center mt-5">
+    <div class="container text-center mt-5 text-light">
 
         <h1>My Example Page</h1>
         <h2>Feature H-1</h2>
