new buttom green

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <h2>Heature H-5</h2>
         <h2>Release 2.0.0</h2>
 
+        <button type="button" class="btn btn-success text-center">Guardar</button>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
